Saving to Github

--- a/index.html
+++ b/index.html
@@ -58,46 +58,49 @@
                                  <ul class="header__notify-list">
                                      <li class="header__notify-item header__notify-item--viewed">
                                          <a href="" class="header__notify-link">
-                                             <img src="./assets/img/bum.jfif" alt="" class="header__notify-img">
+                                             <img src="https://cf.shopee.vn/file/45a47ed5c91a5fafa021b6419351bcf6_tn" alt="" class="header__notify-img">
                                              <div class="header__notify-info">
-                                                 <span class="header__notify-name">Bùm chíu chíu chíu</span>
-                                                 <span class="header__notify-description">Mô tả bùm chíu chíu</span>
+                                                 <span class="header__notify-name">Thử thách lương về hấp dẫn lắm bạn ơi!</span>
+                                                 <span class="header__notify-description">💖 Tham gia thử thách để săn giải
+                                                    ✨ Chỉ cần hoàn thành tối thiểu 1 đơn hàng
+                                                    🎉 Cơ hội nhận giải thưởng Shopee Xu
+                                                    👉 Tham gia ngay!</span>
                                              </div>
                                          </a>
                                      </li>
                                      <li class="header__notify-item header__notify-item--viewed">
                                          <a href="" class="header__notify-link">
-                                             <img src="./assets/img/bum.jfif" alt="" class="header__notify-img">
+                                             <img src="https://cf.shopee.vn/file/5f21b03f51c49be9088120a06897333f_tn" alt="" class="header__notify-img">
                                              <div class="header__notify-info">
-                                                 <span class="header__notify-name">Bùm chíu chíu chíu</span>
-                                                 <span class="header__notify-description">Mô tả bùm chíu chíu</span>
+                                                 <span class="header__notify-name">Thứ 7 - Voucher cũng quẩy</span>
+                                                 <span class="header__notify-description">💃 Săn ngay mã giảm đến 70K
+                                                    ⚡ Cùng mã hoàn xu đến 50% đơn từ 0Đ
+                                                    🔥 Thêm loạt mã hoàn xu Xtra + Freeship Xtra
+                                                    👉 Hết rất nhanh - Lẹ làng vào ngay! </span>
                                              </div>
                                          </a>
                                      </li>
                                      <li class="header__notify-item header__notify-item--viewed">
                                          <a href="" class="header__notify-link">
-                                             <img src="./assets/img/bum.jfif" alt="" class="header__notify-img">
+                                             <img src="https://cf.shopee.vn/file/e2cf4cf3df4354056f21a9d73b5fd597_tn" alt="" class="header__notify-img">
                                              <div class="header__notify-info">
-                                                 <span class="header__notify-name">Bùm chíu chíu chíu</span>
-                                                 <span class="header__notify-description">Mô tả bùm chíu chíu</span>
+                                                 <span class="header__notify-name">Voucher toàn sàn ngập tràn bờ đê!</span>
+                                                 <span class="header__notify-description">🌈 Mã toàn sàn hoàn 15K đơn 50K
+                                                    🎁 Săn mã hoàn đến 111k xu vào 12H
+                                                    💖 Mã thời trang giảm ngay 10K
+                                                    🎉 Săn ngay!</span>
                                              </div>
                                          </a>
                                      </li>
                                      <li class="header__notify-item header__notify-item--viewed">
                                          <a href="" class="header__notify-link">
-                                             <img src="./assets/img/bum.jfif" alt="" class="header__notify-img">
+                                             <img src="https://cf.shopee.vn/file/3fcec0d981e288bb1176c3a4b6bd9ef7_tn" alt="" class="header__notify-img">
                                              <div class="header__notify-info">
-                                                 <span class="header__notify-name">Bùm chíu chíu chíu</span>
-                                                 <span class="header__notify-description">Mô tả bùm chíu chíu</span>
-                                             </div>
-                                         </a>
-                                     </li>
-                                     <li class="header__notify-item header__notify-item--viewed">
-                                         <a href="" class="header__notify-link">
-                                             <img src="./assets/img/bum.jfif" alt="" class="header__notify-img">
-                                             <div class="header__notify-info">
-                                                 <span class="header__notify-name">Bùm chíu chíu chíu</span>
-                                                 <span class="header__notify-description">Mô tả bùm chíu chíu</span>
+                                                 <span class="header__notify-name">Deal sốc 1K rẻ chưa từng có</span>
+                                                 <span class="header__notify-description">🎊 Shop Mới lên sàn ưu đãi ngập tràn
+                                                    ⚡ Giờ vàng săn deal chỉ từ 1K
+                                                    🍬 Vô vàn ưu đãi từ ShopeePay
+                                                    💥 Tìm gì cũng có - Mua liền! Mua liền!</span>
                                              </div>
                                          </a>
                                      </li>
@@ -188,12 +191,15 @@
                             <i class="header__cart-icon fas fa-shopping-cart"></i>
                             <span class="header__cart-notice">3</span>
                             <!--No cart-->
-                            <div class="header__cart-list">
+                            <div class="header__cart-list--no-cart">
+
                                 <img src="./assets/img/no-cart.png" alt="" class="header__cart-no-cart-img">
                                 <span class="header__cart-list-no-cart-msg">
                                     Chưa có sản phẩm
                                 </span>
-
+                            </div>
+                                
+                            <div class="header__cart-list">
                                 <h4 class="header__cart-heading">Sản phẩm đã thêm</h4>
                                 <ul class="header__cart-list-item">
                                     <li class="header__cart-item">
